--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,34 @@
 li, button{
   margin-bottom: .5rem;
 }
+p{
+  margin-top: 0;
+}
 h1,h2,h3{
   color: rgb(0, 6, 34);
 }
 li{
   color: rgb(29, 48, 140);
 }
+img{
+  width: 400px;
+}
+tr{
+  display: block;
+  border-bottom: 1px solid #000;
+}
+td{
+  width: 150px;
+  padding: 1rem;
+}
 .App{
   padding: 1rem 3rem;
 }
 .text-red{
 color: red;
+}
+.child{
+  width: 300px;
+  background: rgb(100, 193, 236);
+  padding: 1rem;
 }
